<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_scan">

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.example.elm327.ui_layer.fragments.ScanFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_nav_scan_to_nav_car_info"
            app:destination="@id/nav_car_info" />
    </fragment>

    <fragment
        android:id="@+id/nav_car_info"
        android:name="com.example.elm327.ui_layer.fragments.CarInfoFragment"
        android:label="@string/menu_car_info"
        tools:layout="@layout/fragment_car_info" >
        <action
            android:id="@+id/action_nav_car_info_to_nav_more_info"
            app:destination="@id/nav_more_info" />
    </fragment>

    <fragment
        android:id="@+id/nav_more_info"
        android:name="com.example.elm327.ui_layer.fragments.MoreInfoFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_more_info">
        <action
            android:id="@+id/action_nav_more_info_to_nav_single_pid"
            app:destination="@+id/nav_single_pid"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_single_pid"
        android:name="com.example.elm327.ui_layer.fragments.SinglePidFragment"
        android:label="Single pid"
        tools:layout="@layout/fragment_single_pid"
        />

</navigation>