<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_layer.fragments.CarInfoFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_id" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="191dp"
                tools:layout_editor_absoluteY="140dp" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="text"
                android:text=""
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="16dp" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="191dp"
                tools:layout_editor_absoluteY="140dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="140dp" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/not_sync" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="140dp" />


        <TextView
            android:id="@+id/availablePids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="140dp" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="140dp" />

        <Button
            android:id="@+id/moreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/more" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>